--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "blueimp-md5": "^2.18.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.1",
+    "es6-uuid": "^1.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.5.1",
