--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --open --host 127.0.0.1 --port 9090",
+    "serve": "vue-cli-service serve --open --host 127.0.0.1 --port 8760",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -15,6 +15,8 @@
     "es6-uuid": "^1.0.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-cookies": "^1.7.4",
+    "vue-fragment": "^1.5.2",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
